@@ -4,8 +4,9 @@ under the Developer Certificate of Origin
 
 Please see the Verilator manual for additional contributors.
 
-Jeremy Bennett
 Alex Chadwick
+Gianfranco Costamagna
+Jeremy Bennett
 John Coiner
 Kanad Kanhere
 Richard Myers
